@@ -31,8 +31,10 @@ postgresql-8.3 (8.3~rc1-1) UNRELEASED; urgency=low
     test, too.
   * debian/rules: Add target 'contrib-check' for running the tests in contrib.
     Do not call it by default for now, still needs some work.
+  * debian/rules: Add target 'contrib-installcheck' for running the tests in
+    contrib, using the installed programs in the system.
 
- -- Martin Pitt <mpitt@debian.org>  Fri, 04 Jan 2008 18:26:15 +0100
+ -- Martin Pitt <mpitt@debian.org>  Fri, 04 Jan 2008 19:26:43 +0100
 
 postgresql-8.3 (8.3~beta4-1) experimental; urgency=low
 
